<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/lists_two_line_item_height"
              android:orientation="horizontal">

    <WebView
        android:id="@+id/wv_train_station_picture"
        android:layout_width="@dimen/lists_two_line_item_image_width"
        android:layout_height="@dimen/lists_two_line_item_image_height"
        android:contentDescription="@string/train_station_picture_content_description"
        android:paddingTop="@dimen/lists_two_line_item_image_padding_top"
        android:scrollbars="none"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/lists_two_line_item_image_view_padding_left_right">

        <TextView
            android:id="@+id/tv_train_station_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/lists_two_line_item_text_view_height"
            android:layout_alignParentTop="true"
            android:gravity="bottom"
            android:paddingEnd="@dimen/lists_two_line_item_text_view_padding_left_right"
            android:paddingStart="@dimen/lists_two_line_item_text_view_padding_left_right"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        <ImageView
            android:id="@+id/iv_train_station_has_wifi"
            android:layout_width="@dimen/lists_two_line_item_meta_data_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_train_station_name"
            android:layout_toStartOf="@+id/iv_train_station_has_parking"
            android:background="@drawable/ic_wifi_black_24dp"
            android:contentDescription="@string/train_station_wifi_image_content_description"
            android:paddingEnd="@dimen/lists_two_line_item_image_view_padding_left_right"/>

        <ImageView
            android:id="@+id/iv_train_station_has_parking"
            android:layout_width="@dimen/lists_two_line_item_meta_data_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_train_station_name"
            android:layout_toStartOf="@+id/iv_train_station_has_stepless_access"
            android:background="@drawable/ic_parking_icon"
            android:contentDescription="@string/train_station_stepless_access_image_content_description"
            android:paddingEnd="@dimen/lists_two_line_item_image_view_padding_left_right"/>

        <ImageView
            android:id="@+id/iv_train_station_has_stepless_access"
            android:layout_width="@dimen/lists_two_line_item_meta_data_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_train_station_name"
            android:background="@drawable/ic_accessible_black_24dp"
            android:contentDescription="@string/train_station_stepless_access_image_content_description"/>

    </RelativeLayout>

</LinearLayout>